# Cmake_SharedLib

HelloWorld/: CMakeCache.txt  Makefile  cmake_install.cmake  hello  main.cpp
student/src/: mainapp.cpp
useStudentlib/: CMakeLists.txt
